# EmployeeSystemFrontEnd

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  EmployeeSystemFrontend.pro  EmployeeSystemFrontend.pro.user.01b5aea  EmployeeSystemFrontend.pro.user.da77c32  README.md  addemployeemenu.cpp  addemployeemenu.h  addtaskmenu.cpp  addtaskmenu.h  addvacationmenu.cpp  addvacationmenu.h  ava.qrc  bd.pro  choicetext.cpp  choicetext.h  database.cpp  database.h  descriptionfield.cpp  descriptionfield.h  dialog.cpp  dialog.h  dialog.ui  employee.cpp  employee.h  leftpanel.cpp  leftpanel.h  lockscreen.cpp  lockscreen.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagewindow.cpp  messagewindow.h  pictures.qrc  pttab.cpp  pttab.h  rank.cpp  rank.h  (+8 more)
database_files/: authority.cpp  authority.h  database.cpp  database.h  department.cpp  department.h  document.cpp  document.h  employee.cpp  employee.h  employee_role.cpp  employee_role.h  event.cpp  event.h  payment.cpp  payment.h  rank.cpp  rank.h  requester.cpp  requester.h  role.cpp  role.h  roleauthority.cpp  roleauthority.h  task.cpp  task.h  vacation.cpp  vacation.h
icons/: devices_icon.psd  profile_icon.psd
